# Glotze

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md  build.rs  cargo-sources.json  meson.build  rustfmt.toml
.github/workflows/: flatpak.yml  lint.yml
build-aux/: cargo.sh  io.github.tombreit.Glotze.yml  test-live.sh
build-aux/test-live/: README.md
data/: io.github.tombreit.Glotze.desktop  io.github.tombreit.Glotze.desktop.in  io.github.tombreit.Glotze.metainfo.xml  io.github.tombreit.Glotze.metainfo.xml.in  io.github.tombreit.Glotze.yml  meson.build
data/screenshots/: README.md
po/: POTFILES.in  de.po
scripts/: gen-flathub-manifest.sh  preflight.sh  update-cargo-sources.sh
src/: application.rs  config.rs  i18n.rs  main.rs  window.rs
src/api/: mod.rs  models.rs
src/download/: mod.rs  progress.rs
src/ui/: downloads_page.rs  format.rs  logo.rs  mod.rs  results_page.rs  row.rs
