[package]
name = "glotze"
version = "0.0.6"
edition = "2024"
rust-version = "1.92"
description = "Search and download videos from German public broadcaster Mediatheken"
license = "EUPL-1.2"

[dependencies]
gtk           = { package = "gtk4",       version = "0.11", features = ["v4_14"] }
adw           = { package = "libadwaita", version = "0.9",  features = ["v1_7"] }
reqwest       = { version = "0.13", default-features = false, features = ["blocking", "rustls", "rustls-native-certs", "json"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
async-channel = "2"
jiff          = "0.1"
anyhow        = "1"
log           = "0.4"
env_logger    = "0.11"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pedantic flags everything; allow the noisier categories that don't help here.
cast_possible_truncation = "allow"
cast_precision_loss      = "allow"
cast_sign_loss           = "allow"
module_name_repetitions  = "allow"
needless_pass_by_value   = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
too_many_lines           = "allow"

# Used by `cargo-release` (https://github.com/crate-ci/cargo-release).
# `cargo install cargo-release`, then `cargo release patch -x` cuts a release.
# Omit `-x` for a dry run. See PUBLISHING.md → "Cutting a release".
[package.metadata.release]
publish = false
tag-name = "v{{version}}"
tag-message = "Glotze {{version}}"
pre-release-commit-message = "Release {{version}}"
sign-tag = false
sign-commit = false
allow-branch = ["main"]
push = true
pre-release-hook = ["./scripts/update-cargo-sources.sh"]

[[package.metadata.release.pre-release-replacements]]
file = "data/io.github.tombreit.Glotze.metainfo.xml"
search = "<releases>"
replace = """<releases>
    <release version=\"{{version}}\" date=\"{{date}}\">
      <url>https://github.com/tombreit/Glotze/releases/tag/v{{version}}</url>
    </release>"""
exactly = 1
