[package]
name = "glotze"
version = "0.0.12"
edition = "2024"
rust-version = "1.92"
description = "Search and download videos from public broadcaster Mediatheken (DACH region)."
license = "EUPL-1.2"
publish = false  # binary-only app; not on crates.io

[dependencies]
gtk           = { package = "gtk4",       version = "0.11", features = ["v4_14"] }
adw           = { package = "libadwaita", version = "0.9",  features = ["v1_7"] }
reqwest       = { version = "0.13", default-features = false, features = ["blocking", "rustls", "rustls-native-certs", "json"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
async-channel = "2"
jiff          = "0.1"
anyhow        = "1"
log           = "0.4"
env_logger    = "0.11"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pedantic flags everything; allow the noisier categories that don't help here.
cast_possible_truncation = "allow"
cast_precision_loss      = "allow"
cast_sign_loss           = "allow"
module_name_repetitions  = "allow"
needless_pass_by_value   = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
too_many_lines           = "allow"

# Used by `cargo-release` (https://github.com/crate-ci/cargo-release).
# `cargo install cargo-release`, then cut a release with:
#   cargo release patch -x --no-confirm
# `--no-confirm` is important: without it, cargo-release modifies the files
# (version bump + metainfo replacement + hook) to preview the release, then
# prompts "Continue? [y/N]". The prompt defaults to NO, and if you decline,
# the files stay modified but the commit/tag/push never happens.
# See PUBLISHING.md → "Cutting a release".
[package.metadata.release]
publish = false  # redundant with [package].publish but explicit is good
tag-name = "v{{version}}"
tag-message = "Glotze {{version}}"
pre-release-commit-message = "Release {{version}}"
sign-tag = false
sign-commit = false
allow-branch = ["main"]
push = true
# Runs *after* the version/metainfo bump but *before* the commit/tag/push, so a
# release that would fail CI aborts here and never burns a tag. `--release` makes
# preflight regenerate cargo-sources.json (the old hook's job) and then run the
# full check: fmt/clippy/test + the offline flatpak build + `flatpak-builder-lint
# repo`. That build is slow, so `cargo release` now takes a few minutes — that's
# the point. Run `./scripts/preflight.sh` by hand for the fast checks any time.
pre-release-hook = ["./scripts/preflight.sh", "--release"]

[[package.metadata.release.pre-release-replacements]]
file = "data/io.github.tombreit.Glotze.metainfo.xml"
search = "<releases>"
replace = """<releases>
    <release version=\"{{version}}\" date=\"{{date}}\">
      <url>https://github.com/tombreit/Glotze/releases/tag/v{{version}}</url>
    </release>"""
exactly = 1
# meson.build needs no replacement here: its project() version is read from this
# file's [package] version at configure time (see meson.build).
